<resources>
    <string name="app_name">Sabby Tracker</string>
    <string name="log_in_email">Correo</string>
    <string name="log_in_password">Contraseña</string>

    <string name="action_tos">How To Guide</string>
    <string name="action_logout">LogOut</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <array name="activity_dota_matchHistory_array">
        <item>match 1</item>
        <item>match 2</item>
        <item>match 3</item>
        <item>match 4</item>
    </array>

    <string name="section1">Home</string>
    <string name="section2">Mediciones</string>
    <string name="section3">Historial</string>

    <string name="temperature">Temperatura</string>
    <string name="movement">Posicion</string>
    <string name="sound">Sonido</string>
    <string name="pulse">Pulso</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragmentHome">Hello blank fragmentHome</string>
    <string name="hello_blank_fragmentMetrics">Hello blank fragmentMediciones</string>
    <string name="hello_blank_fragmentHistorial">Hello blank fragmentHistorial</string>

    <string name="metrics_value_temp">34°</string>
    <string name="metrics_value_sound">Sin ruidos fuertes</string>
    <string name="metrics_value_pulse">160 latidos/minuto</string>
    <string name="metrics_value_position">Acostado boca arriba</string>

    <string name="historic_next">Siguiente</string>
    <string name="historic_get_info">Obtener informacion</string>
    <string name="historic_btn_time_start">Hora de inicio</string>
    <string name="historic_btn_time_end">Hora de termino</string>

    <string name="home_status_good">Tu bebe esta bien!</string>
    <string name="historic_btn_date_start">Fecha de inicio</string>
    <string name="historic_btn_date_end">Fecha de termino</string>
    <string name="historic_txt_table_title">Selecciona de que fecha a que fecha y de que hora a que hora te gustaria ver las mediciones de tu bebe.</string>
</resources>