<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentHistoric">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/historic_title_top_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/historic_txt_table_title"
                android:id="@+id/historic_txt_title"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/historic_btns_layout"
                android:layout_below="@id/historic_txt_title"
                android:gravity="center"
                android:layout_marginTop="30dp">
                

                <Button
                    android:layout_width="@dimen/historic_btn_width"
                    android:layout_height="wrap_content"
                    android:text="@string/historic_btn_date_start"
                    android:id="@+id/historic_btn_date_start"
                    android:layout_below="@id/historic_txt_title"
                    android:background="@color/colorLightGreen"/>

                <Button
                    android:layout_width="@dimen/historic_btn_width"
                    android:layout_height="wrap_content"
                    android:text="@string/historic_btn_date_end"
                    android:id="@+id/historic_btn_date_end"
                    android:background="@color/colorLightGreen"
                    android:layout_marginLeft="90dp"/>
                
                

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/historic_btns_txt_layout"
                android:layout_below="@id/historic_btns_layout"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="@dimen/historic_btn_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/historic_txt_date_start"
                    android:text="11/05/2019"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="@dimen/historic_btn_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/historic_txt_date_end"
                    android:text="11/20/2019"
                    android:layout_marginLeft="90dp"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/historic_btn_time"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_below="@id/historic_btns_txt_layout"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="@dimen/historic_btn_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/historic_btn_time_start"
                    android:background="@color/colorLightGreen"
                    android:text="@string/historic_btn_time_start"
                    />

                <Button
                    android:layout_width="@dimen/historic_btn_width"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:background="@color/colorLightGreen"
                    android:id="@+id/historic_btn_time_end"
                    android:text="@string/historic_btn_time_end"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/historic_btns_txt_time"
                android:layout_below="@id/historic_btn_time"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="@dimen/historic_btn_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/historic_txt_time_start"
                    android:text="11:00"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="@dimen/historic_btn_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/historic_txt_time_end"
                    android:text="23:00"
                    android:layout_marginLeft="90dp"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/historic_btns_txt_time"
                android:gravity="center"
                android:layout_marginTop="50dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historic_get_info"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:padding="10dp"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>



</FrameLayout>